infra/k8s/gateway/kgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kgateway-external-svc
  namespace: ld
spec:
  selector:
    gateway.networking.k8s.io/gateway-name: ld-gateway 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
